# waterway

./: Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: rust.yml
src/: bin.rs  lib.rs  main.rs
src/commands/: mod.rs
src/db/: mod.rs
src/git/: branch.rs  commit.rs  index.rs  init.rs  mod.rs  rebase.rs  util.rs
tests/: init_test.rs  mod.rs
tests/commands/: init_test.rs
tests/common/: mod.rs
tests/git/: commit_test.rs
