[package]
name = "waterway"
version = "0.1.0"
edition = "2024"
authors = ["Ben Kruger", "James Seymour"]
license = "MIT"

[lib]
name = "waterway"
path = "src/lib.rs"

[[bin]]
name = "ww"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
git2 = "0.20.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
rand = "0.9.1"
rstest = "0.25.0"

